--- a/.github/workflows/bun-linux-build.yml
+++ b/.github/workflows/bun-linux-build.yml
@@ -192,20 +192,20 @@ jobs:
           bun install --cwd packages/bun-internal-test
           node packages/bun-internal-test/src/runner.node.mjs || true
       - name: Comment on PR
-        if: steps.test.failing_tests != '' && github.event_name == 'pull_request'
+        if: steps.test.outputs.failing_tests != '' && github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v2
         with:
           comment_tag: test-failures-${{matrix.tag}}
           message: |
-            ❌ @${{ github.actor }} ${{ steps.test.failing_tests_count }} files with test failures on ${{ matrix.tag }}:
+            ❌ @${{ github.actor }} ${{ steps.test.outputs.failing_tests_count }} files with test failures on ${{ matrix.tag }}:
 
-            ${{ steps.test.failing_tests }}
+            ${{ steps.test.outputs.failing_tests }}
 
             **[View test output](https://github.com/repos/${{github.owner}}/${{github.repo}}/actions/runs/${{github.run_id}})**
 
             <sup>[#${{github.sha}}](https://github.com/oven-sh/bun/commits/${{github.sha}})</sup>
       - name: Uncomment on PR
-        if: steps.test.failing_tests == '' && github.event_name == 'pull_request'
+        if: steps.test.outputs.failing_tests == '' && github.event_name == 'pull_request'
         uses: thollander/actions-comment-pull-request@v2
         with:
           comment_tag: test-failures-${{matrix.tag}}
@@ -217,5 +217,5 @@ jobs:
             <sup>[#${{github.sha}}](https://github.com/oven-sh/bun/commits/${{github.sha}})</sup>
       - id: fail
         name: Fail the build
-        if: steps.test.failing_tests != ''
+        if: steps.test.outputs.failing_tests != ''
         run: exit 1
