--- a/.github/workflows/bun-linux-build.yml
+++ b/.github/workflows/bun-linux-build.yml
@@ -151,6 +151,7 @@ jobs:
     name: Tests ${{matrix.tag}}
     runs-on: ubuntu-latest
     needs: [linux]
+    if: github.event_name == 'pull_request'
     timeout-minutes: 10
     outputs:
       failing_tests: ${{ steps.test.outputs.failing_tests }}
