--- a/.github/workflows/bun-linux-build.yml
+++ b/.github/workflows/bun-linux-build.yml
@@ -190,6 +190,7 @@ jobs:
           bun install
           bun install --cwd test/bun.js
           bun install --cwd test/bun.js/third-party/body-parser-test
+          bun install --cwd test/bun.js/third-party/napi_create_external
           bun install --cwd packages/bun-internal-test
           node packages/bun-internal-test/src/runner.node.mjs || true
       - name: Comment on PR
