run `bun test` after macOS builds

--- a/.github/workflows/bun-mac-x64-baseline.yml
+++ b/.github/workflows/bun-mac-x64-baseline.yml
@@ -402,6 +402,7 @@ jobs:
       matrix:
         include:
           - tag: bun-darwin-x64-baseline
+            runner: macos-11
     steps:
       - id: checkout
         name: Checkout
