--- a/.github/workflows/bun-types-tests.yml
+++ b/.github/workflows/bun-types-tests.yml
@@ -36,5 +36,15 @@ jobs:
       - name: Generate package
         run: bun run build
 
+      - name: Shim Prettier
+        run: |
+          prettier_dir=$(mktemp -d)
+          cat > "$prettier_dir/prettier" <<EOF
+          #!/bin/sh
+          bun prettier "$@"
+          EOF
+          chmod +x "$prettier_dir/prettier"
+          echo "$prettier_dir" > "$GITHUB_PATH"
+
       - name: Tests
         run: bun run test
