--- a/.prettierignore
+++ b/.prettierignore
@@ -8,4 +8,5 @@ src/test/fixtures
 src/react-refresh.js
 test/snapshots
 test/snapshots-no-hmr
-test/js/deno
+test/js/deno/*.test.ts
+test/js/deno/**/*.test.ts
