--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -142,8 +142,8 @@
       "cwd": "${file}/../",
       "console": "internalConsole",
       "env": {
-        "BUN_DEBUG_QUIET_LOGS": "1",
-        "BUN_DUMP_SYMBOLS": "1"
+        "BUN_DEBUG_QUIET_LOGS": "1"
+        // "BUN_DUMP_SYMBOLS": "1"
       }
     },
     {
