--- a/.github/workflows/bun-types-tests.yml
+++ b/.github/workflows/bun-types-tests.yml
@@ -31,7 +31,10 @@ jobs:
           node-version: latest
 
       - name: Install dependencies
-        run: bun install
+        run: | 
+          bun install
+          bun install
+
 
       - name: Generate package
         run: bun run build
