--- a/.github/workflows/bun-typecheck.yml
+++ b/.github/workflows/bun-typecheck.yml
@@ -1,41 +1,31 @@
-name: bun-types
+name: typecheck
 on:
   push:
+    branches: [main]
     paths:
       - "packages/bun-types/**"
-    branches: [main]
+      - "test/**"
+
   pull_request:
     paths:
       - "packages/bun-types/**"
+      - "test/**"
 
 jobs:
   tests:
-    name: type-tests
+    name: check-tests
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: packages/bun-types
-
+        working-directory: test
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-
       - name: Install bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: canary
-
-      - name: Install node
-        uses: actions/setup-node@v3
-        with:
-          node-version: latest
-
       - name: Install dependencies
-        run: |
-          bun install
-
-      - name: Generate package
-        run: bun run build
-
-      - name: Tests
-        run: bun run test
+        run: bun install
+      - name: Typecheck tests
+        run: bun run typecheck
