--- a/packages/bun-types/package.json
+++ b/packages/bun-types/package.json
@@ -1,20 +1,22 @@
 {
   "name": "bun-types",
-  "types": "index.d.ts",
-  "private": true,
   "repository": "https://github.com/oven-sh/bun",
-  "scripts": {
-    "build": "rm -rf ./dist && bun run bundle && bun run fmt",
-    "bundle": "bun scripts/bundle.ts ./dist",
-    "test": "tsd",
-    "fmt": "prettier --write './**/*.{ts,tsx,js,jsx}'"
-  },
   "devDependencies": {
     "conditional-type-checks": "^1.0.6",
     "prettier": "^2.4.1",
-    "tsd": "^0.22.0"
+    "tsd": "^0.22.0",
+    "typescript": "^5.0.2"
+  },
+  "private": true,
+  "scripts": {
+    "prebuild": "echo $(pwd)",
+    "build": "rm -rf ./dist && bun run bundle && bun run fmt",
+    "bundle": "bun scripts/bundle.ts ./dist",
+    "test": "tsd",
+    "fmt": "echo $(which prettier) && prettier --write './**/*.{ts,tsx,js,jsx}'"
   },
   "tsd": {
     "directory": "tests"
-  }
+  },
+  "types": "index.d.ts"
 }
