--- a/.github/workflows/bun-linux-build.yml
+++ b/.github/workflows/bun-linux-build.yml
@@ -174,6 +174,12 @@ jobs:
         with:
           name: bun-${{matrix.tag}}
           path: ${{runner.temp}}/release
+      - id: shim-path
+        name: set path
+        run: |
+          stage_bin=$(mktemp -d)
+          echo "stage_bin=$stage_bin"
+          echo $stage_bin >> $GITHUB_PATH
       - id: install
         name: Install
         run: |
@@ -181,7 +187,7 @@ jobs:
           unzip bun-${{matrix.tag}}.zip
           cd bun-${{matrix.tag}}
           chmod +x bun
-          sudo mv bun /usr/local/bin/bun
+          mv bun $stage_bin/bun
           bun --version
       - id: test
         name: Test (node runner)
