--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -138,11 +138,13 @@
       "request": "launch",
       "name": "bun build debug stdout",
       "program": "bun-debug",
-      "args": ["bun", "${file}"],
+      "args": [ "bun", "--react-server-components", "--entry-names=./[name]-[hash].[ext]", "--outdir=out", "--platform=bun", "${file}"],
       "cwd": "${file}/../",
       "console": "internalConsole",
       "env": {
-        "BUN_DEBUG_QUIET_LOGS": "1"
+        "NODE_ENV" :"production",
+        "GOMAXPROCS": "2",
+        // "BUN_DEBUG_QUIET_LOGS": "1"
         // "BUN_DUMP_SYMBOLS": "1"
       }
     },
