--- a/.github/workflows/bun-mac-x64.yml
+++ b/.github/workflows/bun-mac-x64.yml
@@ -417,12 +417,6 @@ jobs:
         with:
           name: ${{matrix.tag}}
           path: ${{runner.temp}}/release
-      - id: shim-path
-        name: set path
-        run: |
-          stage_bin=$(mktemp -d)
-          echo "stage_bin=$stage_bin"
-          echo $stage_bin >> $GITHUB_PATH
       - id: install
         name: Install
         run: |
@@ -430,7 +424,7 @@ jobs:
           unzip ${{matrix.tag}}.zip
           cd ${{matrix.tag}}
           chmod +x bun
-          mv bun $stage_bin/bun
+          sudo mv bun /usr/local/bin/bun
           bun --version
       - id: test
         name: Test (node runner)
