--- a/bench/websocket-server/package.json
+++ b/bench/websocket-server/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bufferutil": "^4.0.7",
     "utf-8-validate": "^5.0.10",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.20.0",
     "ws": "^8.9.0"
   }
 }
