--- a/.github/workflows/bun-typecheck.yml
+++ b/.github/workflows/bun-typecheck.yml
@@ -15,9 +15,7 @@ jobs:
   tests:
     name: check-tests
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: test
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -27,5 +25,8 @@ jobs:
           bun-version: canary
       - name: Install dependencies
         run: bun install
+      - name: Install dependencies
+        run: bun install
+        working-directory: test
       - name: Typecheck tests
         run: bun run typecheck
