--- a/.github/workflows/bun-typecheck.yml
+++ b/.github/workflows/bun-typecheck.yml
@@ -7,6 +7,8 @@ on:
       - "test/**"
 
   pull_request:
+    branches:
+      - main
     paths:
       - "packages/bun-types/**"
       - "test/**"
